# electronics_network

./: .gitignore  README.md  project_structure.txt  pyproject.toml
electronics_network/: asgi.py  settings.py  urls.py  wsgi.py
network/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_alter_networknode_options_and_more.py  0003_alter_networknode_debt.py
templates/network/: base.html  index.html  login.html
